# streakr

./: .gitignore  README.md  home.html  index.html  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddHabitModal.tsx  HabitCard.tsx  Heatmap.tsx  LoadingScreen.tsx  OnboardingScreen.tsx  ProgressRing.tsx  Sidebar.tsx
src/hooks/: useStreak.ts
src/store/: index.ts  storage.ts
src/types/: index.ts
src/views/: Dashboard.tsx  History.tsx  Settings.tsx  Stats.tsx
